--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "Content-Hub",
   "private": true,
   "dependencies": {
-    "semantic-ui": "~2.1.4"
+    "semantic-ui": "~2.1.4",
+    "jquery": "~2.2.0"
   }
 }
